tests/paczka1/small_fuzzy/68544473.err
Error in line 1: hF4 S43 1,3
Error in line 3: hF4 S61 46,1
Error in line 7: OTlx A774 96,0
